--- a/package.json
+++ b/package.json
@@ -22,5 +22,13 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.2"
+  },
+  "dependencies": {
+    "cookie": "^0.2.3",
+    "flood-gate": "^1.0.0",
+    "lodash": "^4.11.1",
+    "md5": "^2.1.0",
+    "rethinkdb": "^2.3.1",
+    "ws": "^1.1.0"
   }
 }
