--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "cookie": "^0.2.3",
     "flood-events": "^1.1.0",
-    "flood-gate": "^1.0.3",
+    "flood-gate": "^1.0.4",
+    "floodgate": "^0.1.2",
     "lodash": "^4.11.1",
     "md5": "^2.1.0",
     "rethinkdb": "^2.3.1",
