--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Processing service used by Floodway systems",
   "main": "./build/core.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha"
   },
   "repository": {
     "type": "git",
@@ -20,17 +20,20 @@
   },
   "homepage": "https://github.com/Floodway/flood-processor#readme",
   "devDependencies": {
+    "chai": "^3.5.0",
     "gulp": "^3.9.1",
-    "gulp-coffee": "^2.3.2"
+    "gulp-coffee": "^2.3.2",
+    "mocha": "^2.4.5"
   },
   "dependencies": {
     "cookie": "^0.2.3",
-    "flood-events": "^1.1.0",
+    "flood-events": "^1.1.1",
     "flood-gate": "^1.0.4",
-    "floodgate": "^0.1.2",
+    "is_js": "^0.8.0",
     "lodash": "^4.11.1",
     "md5": "^2.1.0",
-    "rethinkdb": "^2.3.1",
+    "node-uuid": "^1.4.7",
+    "redis": "^2.5.3",
     "ws": "^1.1.0"
   }
 }
