--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "2.0.0",
   "description": "Floodway in TS",
   "main": "./dist/__entry.js",
-  "typescript": {
-      "definition": "./dist/__entry.d.ts"
-  },
+  "floodMain": "./dist/example/example.js",
+  "typings": "./dist/__entry",
   "repository": {
     "type": "git",
     "url": "https://github.com/Floodway/flood-processor.git"
@@ -21,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
+    "class-validator": "^0.5.0",
     "commander": "^2.9.0",
     "cookie": "^0.3.1",
     "cookie-parser": "^1.4.3",
@@ -35,5 +35,8 @@
     "rethinkdb": "^2.3.2",
     "serve-static": "^1.11.1",
     "ws": "^1.1.1"
+  },
+  "devDependencies": {
+    "typescript": "^1.8.10"
   }
 }
