--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "./src/cli/main.ts",
         "./src/cli/main-generate-json.ts",
         "./src/cli/main-serve-json.ts",
+        "./src/cli/main-generate-java.ts",
         "./src/cli/main-dev.ts",
         "./src/example/example.ts",
         "./typings/index.d.ts",
