--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ pids
 *.pid
 *.seed
 
-.idea
+.idea/
 
 uploads
 
@@ -35,3 +35,4 @@ node_modules
 
 # Optional REPL history
 .node_repl_history
+.idea/workspace.xml
