--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "cookie-parser": "^1.4.3",
     "expect": "^1.20.2",
     "express": "^4.14.0",
+    "flood-gate": "^2.1.0",
+    "floodgate": "^0.1.2",
     "inquirer": "^1.1.2",
     "lodash": "^4.13.1",
     "md5": "^2.1.0",
